[tool.poetry]
name = "tree"
version = "0.1.0"
description = ""
authors = ["Bakhruz Dzhafarov <badzhafarov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
